--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,10 @@ img{
     display: block;
     color:var(--blanco);
 }
+
+@media (min-width: 768px) {
+    .contenido-principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+}
