--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ a{
 
 h1,h2,h3,h4{
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 
 h1{
@@ -132,6 +133,7 @@ img{
     .contenido-principal{
         display: grid;
         grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
     }
 }
 
@@ -141,7 +143,7 @@ img{
 }
 
 .entrada:last-of-type{
-    border-bottom: none;
+    border: none;
     margin-bottom: 1rem;
 }
 
@@ -154,6 +156,7 @@ img{
     font-weight: bold;
     padding: 1rem 3rem;
     color: var(--blanco);
+    margin-bottom: 2rem;
 } 
 
 @media (min-width: 768px) {
@@ -164,4 +167,36 @@ img{
 
 .boton--primario{
     background-color: var(--negro);
+}
+
+.boton--secundario{
+    background-color: var(--primario);
+}
+
+.cursos{
+    list-style: none;
+}
+
+.widget-curso{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.widget-curso:last-of-type{
+    border-bottom: none;
+    margin-bottom: 0;
+}
+
+.widget-curso__label{
+    font-family: var(--fuenteParrafos);
+    font-weight: bold;
+}
+
+.widget-curso__infor{
+    font-weight: normal;
+}
+
+.widget-curso__label,
+.widget-curso__infor{
+    font-size: 2rem;
 }
