--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body{
 .contenedor{
     max-width: 120rem;
     width: 90%;
+    width: min(90%, 120rem);  /* Hace lo mismo que las dos lineas de arriba*/
     margin: 0 auto;
 }
 
@@ -99,6 +100,9 @@ img{
     }
 }
 
+.barra{
+    padding-top: 3rem;
+}
 @media (min-width: 768px) {
     .barra{
         display: flex;
@@ -200,3 +204,10 @@ img{
 .widget-curso__infor{
     font-size: 2rem;
 }
+
+.footer{
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 3rem;
+}
+
