Creamos la pagina nosotros y añadimos las de contacto y cursos

--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,7 @@ img{
 
 @media (min-width: 768px) {
     .header__texto--titulo{
-        line-height: 2;
-        margin-top: 12rem;
+        margin: 12rem 0 0 0;
     }
 }
 
@@ -211,3 +210,10 @@ img{
     margin-top: 3rem;
 }
 
+@media (min-width: 768px) {
+    .sobre-nosotros{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
