--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ img{
     font-weight: 700;
 }
 
+/** Nav **/
 @media (min-width: 768px) {
     .navegacion{
         display: flex; 
@@ -132,6 +133,7 @@ img{
     color:var(--blanco);
 }
 
+/** Contenido Principal**/
 @media (min-width: 768px) {
     .contenido-principal{
         display: grid;
@@ -150,6 +152,7 @@ img{
     margin-bottom: 1rem;
 }
 
+/** Botones **/
 .boton{
     display: block; /*Para que en un dispositivo movil tome todo el espacio disponible*/
     font-family: var(--fuenteHeading);
@@ -176,6 +179,7 @@ img{
     background-color: var(--primario);
 }
 
+/** Aside **/
 .cursos{
     list-style: none;
 }
@@ -191,7 +195,7 @@ img{
 }
 
 .widget-curso__label{
-    font-family: var(--fuenteParrafos);
+    font-family: var(--fuenteHeading);
     font-weight: bold;
 }
 
@@ -204,6 +208,7 @@ img{
     font-size: 2rem;
 }
 
+/**Fotoer**/
 .footer{
     background-color: var(--negro);
     padding-bottom: 3rem;
@@ -216,4 +221,36 @@ img{
         grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
     }
+}
+
+/** Cursos **/
+.curso{
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--gris);
+}
+
+.curso:last-of-type{
+    border-bottom: none;
+}
+
+@media (min-width: 768px) {
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 2rem;
+    }
+}
+
+.curso__label{
+    font-family: var(--fuenteHeading);
+    font-weight: bold;
+}
+
+.curso__infor{
+    font-weight: normal;
+}
+
+.curso__label,
+.curso__infor{
+    font-size: 2rem;
 }
