--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,12 @@ img{
     padding: 1rem 3rem;
     color: var(--blanco);
     margin-bottom: 2rem;
+    border: none;
 } 
+
+.boton:hover{
+    cursor: pointer;
+}
 
 @media (min-width: 768px) {
     .boton{
@@ -253,4 +258,39 @@ img{
 .curso__label,
 .curso__infor{
     font-size: 2rem;
+}
+
+/** Contacto **/
+
+.contacto-bg{
+    background-image: url(/img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+    gap: 2rem;
+}
+
+.campo__label{
+    flex: 0 0 9rem;
+    text-align: right;
+}
+
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+
+.campo__field--textarea{
+    height: 20rem;
 }
